# active_mapping_dvc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  package.xml  readme.md
action/: OctomapUpdate.action  SensorAngleUpdate.action
config/: base_control.yaml  gimbal_gazebo_control.yaml  task.yaml
config/move_base/: costmap_common_params_waffle_pi.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params_waffle_pi.yaml
include/active_mapping/: active_mapping.h
include/active_mapping/controller/: gazebo_gimbal_controller.h  gimbal_controller.h
include/active_mapping/movements/: geometry_pose.h
include/active_mapping/utils/: bounding_box.h  common_utils.h  disjoint_set.h  math_utils.h  octomap_utils.h  pcl_utils.h  pointxyzirt.h  rviz_utils.h  sensor_utils.h  tictoc.hpp
include/active_mapping/view_space/: frontier.h  frontier_view_space_finder.h  sample_viewpoints.h  simple_view_space_finder.h  view.h  view_space_finder.h
include/active_mapping/world_representation/: ig_tree.h  octree_hash.h  world_representation.h
include/gridastar/: util.h
launch/: mr1000_ac_house.launch  mr1000_gazebo_house.launch
maps/: map.pgm  map.yaml
rviz/: active_mapping.rviz
src/active_mapping/: active_mapping.cpp
src/active_mapping/controller/: gazebo_gimbal_controller.cpp
src/active_mapping/movements/: geometry_pose.cpp
src/active_mapping/utils/: bounding_box.cpp  math_utils.cpp  octomap_utils.cpp  rviz_utils.cpp  tictoc.cpp
src/active_mapping/view_space/: frontier.cpp  frontier_view_space_finder.cpp  sample_viewpoints.cpp  view.cpp
src/active_mapping/world_representation/: ig_tree.cpp  world_representation.cpp
src/apps/: active_mapping_task.cpp  livox_custom_msg_converter.cpp  odom_to_tf_node.cpp
src/gridastar/: AStar2.cpp
srv/: aster_query.srv  disp_ray.srv  get_world_representation.srv  insert_point_cloud.srv
urdf/: mr1000_motor.urdf.xacro  wheel.urdf.xacro
worlds/: house3e.world
